# bvb_predictor

./: .gitignore  README.md  README_CN.md  build_dataset.sh  pyproject.toml  run_predict.sh  run_train.sh
.github/workflows/: release-artifacts.yml
docs/: poster_gen_prompt.md
scripts/: export_onnx.py  predict.py  train.py  train_odds.py
scripts/data/: build_processed_matches.py  fetch_football_data.py
src/bvb_predictor/: __init__.py
src/bvb_predictor/data/: dataset.py  schema.py
src/bvb_predictor/features/: league_rolling.py
src/bvb_predictor/models/: odds_mlp.py  poisson_mlp.py
src/bvb_predictor/pipeline/: __init__.py  predictor.py
src/bvb_predictor/utils/: score_prob.py
